Move assets into gb folder, integrate into makefile

--- a/gb/Makefile
+++ b/gb/Makefile
@@ -1,12 +1,22 @@
 # todo: try to make this more cross-platform friendly
 
-build/room-demo.gb: build/ main.asm man.2bpp
+build/room-demo.gb: build/ main.asm gen/sprite.2bpp gen/sprite.pal
 	rgbasm -o build/main.o main.asm
 	rgblink -n build/room-demo.sym -o build/room-demo.gb build/main.o
 	rgbfix -p0 -v build/room-demo.gb
 
+gen/sprite.2bpp: gen/
+	rgbgfx -o gen/sprite.2bpp sprite.png
+
+gen/sprite.pal: gen/
+	rgbgfx -p gen/sprite.pal sprite-palette.png
+
 build/:
 	mkdir build
 
+gen/:
+	mkdir gen
+
 clean:
 	rmdir /s /q build
+	rmdir /s /q gen
