Add gb room.png; cleanup

--- a/gb/Makefile
+++ b/gb/Makefile
@@ -5,10 +5,10 @@ build/room-demo.gb: build/ main.asm gen/sprite.2bpp gen/sprite.pal
 	rgblink -n build/room-demo.sym -o build/room-demo.gb build/main.o
 	rgbfix -p0 -v build/room-demo.gb
 
-gen/sprite.2bpp: gen/
+gen/sprite.2bpp: gen/ sprite.png
 	rgbgfx -o gen/sprite.2bpp sprite.png
 
-gen/sprite.pal: gen/
+gen/sprite.pal: gen/ sprite-palette.png
 	rgbgfx -p gen/sprite.pal sprite-palette.png
 
 build/:
