--- a/gb/Makefile
+++ b/gb/Makefile
@@ -1,6 +1,6 @@
 # todo: try to make this more cross-platform friendly
 
-build/room-demo.gb: build/ main.asm gen/sprite.2bpp gen/sprite.pal
+build/room-demo.gb: build/ main.asm gen/sprite.2bpp gen/sprite.pal gen/tiles.2bpp gen/tiles.pal
 	rgbasm -o build/main.o main.asm
 	rgblink -n build/room-demo.sym -o build/room-demo.gb build/main.o
 	rgbfix -p0 -v build/room-demo.gb
@@ -10,6 +10,12 @@ gen/sprite.2bpp: gen/ sprite.png
 
 gen/sprite.pal: gen/ sprite-palette.png
 	rgbgfx -p gen/sprite.pal sprite-palette.png
+
+gen/tiles.2bpp: gen/ room.png
+	rgbgfx -u -t gen/room.tilemap -o gen/tiles.2bpp room.png
+
+gen/tiles.pal: gen/ tiles-palette.png
+	rgbgfx -p gen/tiles.pal tiles-palette.png
 
 build/:
 	mkdir build
